--- a/SignalRClients/SignalRClients.ConsoleApp.csproj
+++ b/SignalRClients/SignalRClients.ConsoleApp.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9979ACB5-7239-4461-B234-B9C9D989BC66}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SignalRClients</RootNamespace>
-    <AssemblyName>SignalRClients</AssemblyName>
+    <RootNamespace>SignalRClients.ConsoleApp</RootNamespace>
+    <AssemblyName>SignalRClients.ConsoleApp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">.\</SolutionDir>
